--- a/style.css
+++ b/style.css
@@ -1,22 +1,43 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:300,700&display=swap");
 
-.container{
-    /* border-radius: 11px; */
+/* .container{
+    border-radius: 11px;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
     border: 57px solid #12242e;
     height: 549px;
     font-family: Arial, Helvetica, sans-serif
+}  */
+.community { 
+    grid-area: header; 
+}
+.card {
+     grid-area: main; 
+}
+.why-us { 
+    grid-area: right; 
 }
 
-.merg{
+.container {
+  display: grid;
+  grid-template-areas:
+    'header header'
+    'main right';
+    align-items: center;
+    border: 57px solid #12242e;
+    height: 549px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+}
+
+/* .merg{
     display: flex;
     justify-content: center;
     width: 100%;
     height: auto;
-}
+} */
 
 .community{
     background-color: rgb(255, 253, 253);
@@ -25,13 +46,15 @@
 
 .why-us{
     background-color: rgba(85, 145, 142, 0.698);
-    width: 50%;
+    width: 100%;
+    height: 100%;
     color: white;
 }
 
 .card{
     background-color: rgb(15, 67, 66);
-    width: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .btn{
